Fix horizontal overflow

--- a/style.css
+++ b/style.css
@@ -775,3 +775,8 @@ body {
 
     z-index: 2;
 }
+
+html,
+body {
+    overflow-x: hidden;
+}
